# 3d-face-reconstruction

./: .gitignore  BFMParameters.h  BaselFaceModel.cpp  BaselFaceModel.h  CMakeLists.txt  FaceReconstructor.cpp  FaceReconstructor.h  FacialLandmarks.h  FileReader.cpp  FileReader.h  Illumination.h  ImageExtraction.h  InputData.cpp  InputData.h  InputDataExtractor.cpp  InputDataExtractor.h  LICENSE  ModelConverter.cpp  ModelConverter.h  Optimization.cpp  Optimization.h  Optimizer.cpp  Optimizer.h  ProcrustesAligner.h  README.md  Renderer.cpp  Renderer.h  Rendering.cpp  Rendering.h  SingleInputFrame.cpp  SingleInputFrame.h  main.cpp  visualize_dense.py  visualize_sparse.py
